# ancestry-prover

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  loadstar.rs  lodestar.rs  lodestar_direct.rs  lodestar_provider.rs  multiproof.rs  prover.rs  provider.rs  state_prover_provider.rs
src/testdata/: beacon_block.json  block_roots.json
src/testdata/beacon_block_headers/: 7862720.json  7869323.json  7877867.json  7878867.json  7879316.json  7879323.json  7879376.json
src/testdata/execution_blocks/: 18615160.json
src/testdata/execution_blocks/receipts/: 18615160.json
src/testdata/state_prover/: block_proof_0x7d6b5bbdd7de1273eb399ca4135896cecd6bbc63d4a221c43e230b9ad1eafa3b_body,execution_payload,receipts_root.json  block_proof_0x7d6b5bbdd7de1273eb399ca4135896cecd6bbc63d4a221c43e230b9ad1eafa3b_body,execution_payload,transactions,15.json  state_proof_0x044adfafd8b8a889ea689470f630e61dddba22feb705c83eec032fac075de2ec_g308459.json  state_proof_0x82ce3abd5932374ee42e4dab915eff7cd63e68cbb828b79f399bb2f11bebd41c_historical_summaries,201,block_summary_root.json  state_proof_0xa8d51bd280b750751fd9394710287e56c7ba2535348a07b09b1a2c6c444ef392_historical_summaries,201,block_summary_root.json
