[package]
name = "ancestry-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
ethereum_consensus = { package = "ethereum-consensus", git = "https://github.com/ralexstokes/ethereum-consensus" }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", branch = "main" }
async-trait = "0.1.74"
futures = "0.3.23"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
mockall = "0.12.1"
thiserror = "1.0.58"
reqwest = "0.11.22"
