[package]
name = "ancestry-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
ethereum_consensus = { package = "ethereum-consensus", git = "https://github.com/ralexstokes/ethereum-consensus" }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", branch = "main" }
sha2 = { version = "0.9.8", default-features = false }
async-trait = "0.1.74"
futures = "0.3.23"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
mockall = "0.12.1"
thiserror = "1.0.58"
reqwest = "0.11.22"
httptest = "0.15.5"
alloy-primitives = "0.7.0"
hex = "0.4.3"
